--- a/src/styles.css
+++ b/src/styles.css
@@ -22,25 +22,25 @@ button:hover {
   cursor: pointer;
 }
 
-.input-area {
+/* .input-area {
   background-color: #c6e5d9;
   width: 400px;
   height: 30px;
   padding: 8px;
   margin: 8px;
   border-radius: 8px;
-}
+} */
 
-.incomplete-area {
+/* .incomplete-area {
   border: 2px solid #aacfd0;
   width: 400px;
   min-height: 200px;
   padding: 8px;
   margin: 8px;
   border-radius: 8px;
-}
+} */
 
-.complete-area {
+/* .complete-area {
   border: 2px solid #aacfd0;
   width: 400px;
   min-height: 200px;
@@ -48,7 +48,7 @@ button:hover {
   margin: 8px;
   border-radius: 8px;
   background-color: #c9dede;
-}
+} */
 
 .title {
   text-align: center;
